Fixed bug causing white space at the bottom of the page when scrolled.

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,6 @@ body {
 
 /* The overall container for a given page */
 .container {
-  height: 100vh;
   display: flex;
   flex-direction: column;
 
